# aicli

./: ADD-LLM.md  API.md  MODEL-NOTES.md  README.md  TODO.md  aicli-project-spec.md  pyproject.toml  test-models.sh
src/aicli/: __init__.py  cli.py  config.py
src/aicli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/aicli/core/: actions.py  executor.py  orchestrator.py  parser.py  plan_parser.py  planner.py  result_store.py  session.py  system_prompt.py
src/aicli/core/system_prompts/: default.md
src/aicli/drivers/: base.py  claude.py  gemini.py  ollama.py  openai.py  registry.py
src/aicli/output/: logger.py  renderer.py  tracer.py
tests/: test_cli_utils.py  test_executor.py  test_model_filter.py  test_orchestrator_v2.py  test_parser.py  test_permissions.py  test_plan_parser.py  test_result_store.py  test_retry.py
tests/test_drivers/: test_ollama.py
